# Scope-Proof

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  USE_POLICY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: defect.yml  public-alpha-case.yml  public-alpha-feedback.yml
.github/workflows/: ci.yml  pages.yml  scopeproof.yml
.scopeproof/: requirements-confirmation.json  requirements.txt
apps/: __init__.py
apps/web/: __init__.py  app.py  launcher.py
docs/: development-environment.md  github-action-external-validation.md  github-action.md  privacy-readiness.md
docs/alpha/: acceptance-criteria-confirmation-template.md  concierge-host-checklist.md  outcome-form.md  owner-rehearsal.md  participant-evidence-unblocker.md  participant-quickstart.md  public-pr-qualification-checklist.md
docs/commercialization/: design-partner-sprint.md  market-positioning-hypotheses.md
docs/dogfood/: public-pr-protocol.md
docs/launch/: demo-script.md  evidence-matrix.md  linkedin-alpha-playbook.md  linkedin-draft.md  non-fork-action-validation.md
docs/releases/: post-v0.2.2-maturity-audit.md  v0.2.2-internal-candidate.md
docs/superpowers/: README.md
evals/comparisons/: current_labels.json  current_pr.json  previous_labels.json  previous_pr.json  rereview_evidence_integrity.json  unchanged_labels.json  unchanged_pr.json
evals/fixtures/: active_filter_omitted_pr.json  ambiguous_criterion_pr.json  analytics_omitted_pr.json  complete_implementation_pr.json  csv_export_pr.json  description_claim_not_in_code_pr.json  happy_path_only_pr.json  implementation_without_tests_pr.json  missing_error_state_pr.json  permission_without_authorization_test_pr.json  scope_expansion_pr.json  test_checks_wrong_behavior_pr.json  unchanged_file_evidence_pr.json
evals/labels/: benchmark_active_filter_omitted.json  benchmark_ambiguous_criterion.json  benchmark_analytics_omitted.json  benchmark_complete_implementation.json  benchmark_description_claim_not_in_code.json  benchmark_happy_path_only.json  benchmark_implementation_without_tests.json  benchmark_missing_error_state.json  benchmark_permission_without_authorization_test.json  benchmark_scope_expansion.json  benchmark_test_checks_wrong_behavior.json  benchmark_unchanged_file_evidence.json  csv_export_expected.json
evals/rehearsals/: owner_rehearsal_requirements.txt
examples/github-actions/: scopeproof.yml
scopeproof_core/: __init__.py  cli.py  demo.py  github_action.py  github_action_publisher.py  github_action_runner.py  presentation.py  resolution_events.py  rule_packs.py  version.py
scopeproof_core/alpha/: __init__.py  models.py  rehearsal.py  rehearsal_storage.py  service.py  storage.py
scopeproof_core/criteria/: __init__.py  confirmation.py  service.py
scopeproof_core/evals/: __init__.py  comparison_runner.py  metrics.py  runner.py
scopeproof_core/gates/: __init__.py  evaluator.py  guidance.py  validation.py
scopeproof_core/github/: __init__.py  client.py
scopeproof_core/reporting/: __init__.py  exporters.py  references.py
scripts/: build_public_demo.py
site/: demo-transcript.html  index.html  styles.css
tests/: test_presentation.py  test_repository_contracts.py  test_rule_packs.py
(+347 files in other folders)
