[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scopeproof"
version = "0.1.2"
description = "Auditable acceptance evidence for public GitHub pull requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "streamlit>=1.37,<2",
]

[project.scripts]
scopeproof = "scopeproof_core.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["scopeproof_core", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --import-mode=importlib"
markers = ["live: opt-in test that calls public GitHub"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
