[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scopeproof"
dynamic = ["version"]
description = "Auditable acceptance evidence for public GitHub pull requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "streamlit>=1.37,<2",
]

[project.urls]
"Use Policy" = "https://github.com/YuzeJ21/Scope-Proof/blob/main/USE_POLICY.md"

[project.scripts]
scopeproof = "scopeproof_core.cli:main"
scopeproof-web = "apps.web.launcher:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<7",
  "ruff>=0.5,<1",
]

[tool.hatch.version]
path = "scopeproof_core/version.py"

[tool.hatch.build.targets.wheel]
packages = ["scopeproof_core", "apps"]

[tool.hatch.build.targets.wheel.force-include]
"evals" = "evals"
"USE_POLICY.md" = "scopeproof_core/USE_POLICY.md"

[tool.hatch.build.targets.sdist]
exclude = ["/.scopeproof", "/.coverage*", "/.superpowers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --import-mode=importlib"
markers = ["live: opt-in test that calls public GitHub"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
